--- a/about-page.html
+++ b/about-page.html
@@ -1,16 +1,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>About page</title>
+  <title>About page</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    .fa {
+      padding: 20px;
+      font-size: 30px;
+      width: 50px;
+      text-align: center;
+      text-decoration: none;
+      margin: 5px 2px;
+    }
 
+    .fa:hover {
+        opacity: 0.7;
+    }
+
+    .fa-facebook {
+      background: #3B5998;
+      color: white;
+    }
+
+    .fa-twitter {
+      background: #55ACEE;
+      color: white;
+    }
+
+    .fa-instagram {
+      background: #125688;
+      color: white;
+    }
+
+    body {
+      text-align: center;
+      /*add more sytles?*/
+    }
+    header {
+      text-align: center;
+    }
+    }
+  </style>
 </head>
+
 <body>
-<h1>Antrea Antoniou</h1>
-<p>Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
-Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
-As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
-On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
-<p>Learn more about me by signing up below!</p>
-<input type="email" placeholder="Your email">
-<input type="submit">
+  <header>
+    <h1>Antrea Antoniou</h1>
+    <ul>
+      <li><a href='index.html'>Home</a></li>
+      <li><a href="#">About Me</a></li>
+      <li><a href="#">Portfolio</a></li>
+    </ul>
+  </header>
+  <p>Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
+  Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
+  As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
+  On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
+  <p>Learn more about me by signing up below!</p>
+  <input type="email" placeholder="Your email">
+  <input type="submit">
+  <p>Or follow me on social media.</p>
+  <a href="#" class="fa fa-facebook"></a>
+  <a href="#" class="fa fa-twitter"></a>
+  <a href="#" class="fa fa-instagram"></a>
 </body>
