added style page for about me

--- a/about-page.html
+++ b/about-page.html
@@ -3,47 +3,10 @@
 <head>
   <title>About page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <style>
-    .fa {
-      padding: 20px;
-      font-size: 30px;
-      width: 50px;
-      text-align: center;
-      text-decoration: none;
-      margin: 5px 2px;
-    }
-
-    .fa:hover {
-        opacity: 0.7;
-    }
-
-    .fa-facebook {
-      background: #3B5998;
-      color: white;
-    }
-
-    .fa-twitter {
-      background: #55ACEE;
-      color: white;
-    }
-
-    .fa-instagram {
-      background: #125688;
-      color: white;
-    }
-
-    body {
-      text-align: center;
-      /*add more sytles?*/
-    }
-    header {
-      text-align: center;
-    }
-    }
-  </style>
+  <link rel="stylesheet" href="css/about-page.css">
 </head>
 
-<body>
+<body background="ARTWORK_DOCUMENTS/photo.jpg">
   <header>
     <h1>Antrea Antoniou</h1>
     <ul>
