--- a/about-page.html
+++ b/about-page.html
@@ -8,11 +8,13 @@
 
 <body background="ARTWORK_DOCUMENTS/photo.jpg">
   <header>
+
     <h1>Antrea Antoniou</h1>
-    <ul>
+    <right>
       <li><a href='index.html'>Home</a></li>
       <li><a href="#">About Me</a></li>
       <li><a href="#">Portfolio</a></li>
+      <background-position=100%>
     </ul>
   </header>
 
@@ -31,6 +33,6 @@
   <a href="#" class="fa fa-facebook"></a>
 
   <a href="#" class="fa fa-twitter"></a>
-  
+
   <a href="#" class="fa fa-instagram"></a>
 </body>
