--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Antrea Antoniou</title>
 
     <!-- ADD BOOTSTRAP CORE HERE!!!! -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -42,7 +42,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
+        <h1>Antrea Antoniou</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
@@ -99,16 +99,60 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://d2qs8jo5daq3wi.cloudfront.net/photos/246613/large/38.jpg?1508152258" alt="First slide">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://d3njjcbhbojbot.cloudfront.net/api/utilities/v1/imageproxy/https://coursera-course-photos.s3.amazonaws.com/65/78ce0081ad11e681d7bb31b0a632ef/starry-night.jpg?auto=format%2Ccompress&dpr=2.625" alt="Second slide">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="https://images.discerningassets.com/image/upload/c_fit,h_1000,w_1000/c_fit,fl_relative,h_1.0,l_deco_watermark,o_40,w_1.0/v1470097423/San_Antonio_44x55_f6pnh5.jpg" alt="Third slide">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
     </div>
   </div>
 </div>
+
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+<div class="carousel-item active">
+<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+</div>
+<div class="carousel-item">
+<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+</div>
+<div class="carousel-item">
+<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
+</div>
+</div>
+</div>
+
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
+      </div>
+    </div>
+  </div>
+
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+  </div>
+  <div class="carousel-item">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+  </div>
+  <div class="carousel-item">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
+  </div>
+</div>
+</div>
+
+
 
     </main><!-- /.container -->
 
