--- a/example.html
+++ b/example.html
@@ -99,7 +99,7 @@
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide" style="width:300px;height:100px>
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
