--- a/example.html
+++ b/example.html
@@ -110,30 +110,30 @@
   </div>
 </div>
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-<div class="carousel-inner">
-<div class="carousel-item active">
-<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
-</div>
-<div class="carousel-item">
-<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
-</div>
-<div class="carousel-item">
-<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
-</div>
-</div>
+      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U1/AS_U1_HT7A8959%20copy.JPG?raw=true" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U1/AS_U1_HT7A8965.JPG?raw=true" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U1/AS_U1_RR.jpg?raw=true" alt="Third slide">
+    </div>
+  </div>
 </div>
 
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/HT7A8929copy.jpg?raw=true" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/HT7A8932%20copy.JPG?raw=true" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/NEW.jpg?raw=true" alt="Third slide">
       </div>
     </div>
   </div>
@@ -141,13 +141,13 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/AS%20ART%20unit%202copy.jpg?raw=true" alt="First slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/AS%20UNIT2%20white.jpg?raw=true" alt="Second slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/HT7A8951%20copy.jpg?raw=true" alt="Third slide">
   </div>
 </div>
 </div>
