--- a/example.html
+++ b/example.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -30,10 +32,10 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="about-page.html">About me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Another Link</a>
+            <a class="nav-link" href="#">Portfolio link</a>
           </li>
         </ul>
       </div>
@@ -110,30 +112,30 @@
   </div>
 </div>
 
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U1/AS_U1_HT7A8959%20copy.JPG?raw=true" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U1/AS_U1_HT7A8965.JPG?raw=true" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U1/AS_U1_RR.jpg?raw=true" alt="Third slide">
-    </div>
-  </div>
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+<div class="carousel-item active">
+<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+</div>
+<div class="carousel-item">
+<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+</div>
+<div class="carousel-item">
+<img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
+</div>
+</div>
 </div>
 
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/HT7A8929copy.jpg?raw=true" alt="First slide">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/HT7A8932%20copy.JPG?raw=true" alt="Second slide">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/NEW.jpg?raw=true" alt="Third slide">
+        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
       </div>
     </div>
   </div>
@@ -141,13 +143,13 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/AS%20ART%20unit%202copy.jpg?raw=true" alt="First slide">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/AS%20UNIT2%20white.jpg?raw=true" alt="Second slide">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
   </div>
   <div class="carousel-item">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/HT7A8951%20copy.jpg?raw=true" alt="Third slide">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
   </div>
 </div>
 </div>
