--- a/about-page.html
+++ b/about-page.html
@@ -8,14 +8,17 @@
 
 <body background="ARTWORK_DOCUMENTS/photo.jpg">
   <header>
-
+    <div >
     <h1>Antrea Antoniou</h1>
     <right>
-      <li><a href='index.html'>Home</a></li>
-      <li><a href="#">About Me</a></li>
-      <li><a href="#">Portfolio</a></li>
+
+  <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#" >About Me</a></li>
+      <li><a href="#" >Portfolio</a></li>
       <background-position=100%>
-    </ul>
+  </ul>
+</div>
   </header>
 
   <p>Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
