last upload Friday

--- a/example.html
+++ b/example.html
@@ -98,6 +98,12 @@
         </div>
       </div>
 
+      <style>
+        body {
+          d-block w-100: 10%
+        }
+      </style>
+
       <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
