--- a/example.html
+++ b/example.html
@@ -104,24 +104,24 @@
         }
       </style>
 
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide" style="width:300px;height:100px>
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
-    </div>
+   <div id="carouselExampleSlidesOnly" class="carousel slide1" data-ride="carousel">
+<div class="carousel-inner">
+  <div class="carousel-item active">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide" style="width:300px;height:100px>
+  </div>
+  <div class="carousel-item">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
+  </div>
+  <div class="carousel-item">
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/StillLife_Mannequin.jpg?raw=true" alt="Third slide">
   </div>
 </div>
+</div>
 
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/ART%20AS%20unit%202.jpg?raw=true" alt="First slide">
+    <div id="carouselExampleSlidesOnly" class="carousel slide2" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/ART%20AS%20unit%202.jpg?raw=true" alt="First slide">
       </div>
       <div class="carousel-item">
         <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/AS%20UNIT2%20white.jpg?raw=true" alt="Second slide">
@@ -129,10 +129,11 @@
       <div class="carousel-item">
         <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/HT7A8951%20copy.jpg?raw=true" alt="Third slide">
       </div>
-    </div>
+</div>
 </div>
 
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+
+      <div id="carouselExampleSlidesOnly" class="carousel slide3" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/HT7A8929copy.jpg?raw=true" alt="First slide">
@@ -145,6 +146,7 @@
       </div>
     </div>
   </div>
+
 
 
 
