--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
   <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="#">Antrea</a>
+      <img class="navbar-brand" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/LOGO%20aa.jpg?raw=true"></img>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,43 +41,111 @@
       </div>
     </nav>
 
-    <main role="main" class="container">
+    <main role="main" style="height: 100%">
 
       <div class="starter-template">
         <h1>Antrea Antoniou</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
 
-      <!-- columns -->
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-      </div>
-
-      <div class=“container”>
-      <div class='row'>
-      <div class='col-sm'>
-      One of two columns
-      </div>
-      <div class='col-sm'>
-      One of two columns
-      </div>
-      </div>
-      </div>
-
-      <!-- Button trigger modal -->
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
         Click for copyright information
       </button>
 
-      <!-- Modal -->
+      <div id="carouselContainer" class="vertical-center">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-2" style="width: 100%; height:100%"></div>
+            <div class="col-md-8">
+              <div id="carouselControlsBotton" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block" style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block" style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Sketch_Street_NightView.jpg?raw=true" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block"style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_5772%20copy.jpg?raw=true" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselControlsBotton" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselControlsBotton" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-2" style="width: 100%; height:100%"></div>
+          </div>
+          <p>Still Life<br/>
+            <small>A selective collection of still life paintings. Each of them created with the right use of materials to illustrate the desired ambiance of the final product.
+            </small></p>
+          <div class="row">
+            <div class="col-md-2" style="width: 100%; height:100%"></div>
+            <div class="col-md-8">
+              <div id="carouselControlsBotton" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block" style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/NEW.jpg?raw=trueA8929copy.jpg?raw=true" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block" style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U3/HT7A8932%20copy.JPG?raw=true" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block"style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/HT7A8951%20copy.jpg?raw=true" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselControlsBotton" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselControlsBotton" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-2" style="width: 100%; height:100%"></div>
+          </div>
+          <p>Embossed Debossed<br/>
+            <small>Evolution of work starting from analysing the embossed and debossed parts of the human body, taking a closer look at Michelangelo’s body sketches and anatomy studies. Experimented with lino printing on rice paper and bringing to life an abstract 3D synthesis of musculature.</small></p>
+          <div class="row">
+            <div class="col-md-2" style="width: 100%; height:100%"></div>
+            <div class="col-md-8">
+              <div id="carouselControlsBotton" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block" style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/AS%20ART%20unit%202.jpg?raw=true" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block" style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/HT7A8951%20copy.jpg?raw=true" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block"style="height: 30em" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/U2/ART%20AS%20unit%202.jpg?raw=true" alt="Third slide">
+                  </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselControlsBotton" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselControlsBotton" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-2" style="width: 100%; height:100%"></div>
+          </div>
+          <p>Camouflage<br />
+            <small>A research about animals which can camouflage and unnoticeable objects in our everyday life. I have created the final piece of art using mixed media and collage. It portrays the unknown, the undercover element of life through the illustration of butterflies coming to life after they have been hidden in their cocoon. The use of textured wooden panels instead of canvas adds a more natural sense to the artwork and emphasises that some things which are present and visible, can remain hidden or unnoticeable. </small></p>
+          </div>
+        </div>
+      </div>
+    </main>
+<!--
       <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
@@ -107,7 +175,7 @@
    <div id="carouselExampleSlidesOnly" class="carousel slide1" data-ride="carousel">
 <div class="carousel-inner">
   <div class="carousel-item active">
-    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide" style="width:300px;height:100px>
+    <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/IMG_1789%20copy.jpg?raw=true" alt="First slide">
   </div>
   <div class="carousel-item">
     <img class="d-block w-100" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/PW/Painting_Door.jpg?raw=true" alt="Second slide">
@@ -147,15 +215,10 @@
     </div>
   </div>
 
+-->
 
 
 
-
-    </main><!-- /.container -->
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="https://getbootstrap.com/docs/4.1/assets/js/vendor/popper.min.js"></script>
