--- a/about-page.html
+++ b/about-page.html
@@ -18,42 +18,43 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body background="ARTWORK_DOCUMENTS/photo.jpg">
-  <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Antrea</a>
+<body background="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/ARTWORK_DOCUMENTS/photo.jpg?raw=true">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top">
+    <img class="navbar-brand" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/LOGO%20aa.jpg?raw=true"></img>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="example.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="example.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about-page.html">About me</a>
+          <a class="nav-link" href="about-page.html">About me<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Portfolio link</a>
         </li>
       </ul>
     </div>
+    <h1>Antrea Antoniou</h1>
   </nav>
 
-  <div class="starter-template">
-    <h1>Antrea Antoniou</h1>
-    <p class="lead">Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
-    Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
-    As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
-    On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
-    <p>Learn more about me by signing up below!</p>
-  </div>
-  <input type="email" placeholder="Your email">
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-    Submit
-  </button>
-  <p>Or follow me on social media.</p>
-  <a href="#" class="fa fa-facebook"></a>
-  <a href="#" class="fa fa-twitter"></a>
-  <a href="#" class="fa fa-instagram"></a>
+  <main role="main" class="container">
+    <div class="left">
+      <p class="lead">Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
+      Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
+      As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
+      On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
+      <p>Learn more about me by signing up below!</p>
+    </div>
+    <input type="email" placeholder="Your email">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+      Submit
+    </button>
+    <p>Or follow me on social media.</p>
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-instagram"></a>
+  </main>
 </body>
