--- a/example.html
+++ b/example.html
@@ -20,16 +20,15 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark static-top">
       <img class="navbar-brand" src="https://github.com/NiamhNiShuilleabhain/group_project/blob/master/LOGO%20aa.jpg?raw=true"></img>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="example.html">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about-page.html">About me</a>
@@ -39,13 +38,10 @@
           </li>
         </ul>
       </div>
+      <h1>Antrea Antoniou</h1>
     </nav>
 
     <main role="main" style="height: 100%">
-
-      <div class="starter-template">
-        <h1>Antrea Antoniou</h1>
-      </div>
 
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
         Click for copyright information
