modal button not quite working yet

--- a/about-page.html
+++ b/about-page.html
@@ -40,18 +40,40 @@
     <h1>Antrea Antoniou</h1>
   </nav>
 
-  <main role="main" class="container">
-    <div class="left">
-      <p class="lead">Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
+  <main class="w-50 text-center">
+    <div>
+      <p><br><br>Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
       Through the initial research phase of every project, I embark upon a quest to find the often overlooked detail that will trigger my curiosity to develop my scheme in an unorthodox way. Spotting patterns in nature inspires me to experiment and gradually spark the concept idea.
       As an artist I create with an abstract vision. I am not aiming to represent the actual subject in my final design. Being free to consider the elements independently of their associations of attributes during the development process, naturally allows the emergence of new ideas that elevate the concept to the next level. The uncertainty of what the final product will be is what engages my interest the most and keeps me excited throughout the course of every project.
       On my website you can find my past and recent collections of artwork, and you can purchase your most loved art pieces.</p>
       <p>Learn more about me by signing up below!</p>
     </div>
     <input type="email" placeholder="Your email">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-      Submit
-    </button>
+
+    <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal">
+      Click to open Modal
+    </a>
+
+    <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel">Basic Modal </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">×</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h3>Modal Body</h3>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <p>Or follow me on social media.</p>
     <a href="#" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-twitter"></a>
