Modal and banner added

--- a/about-page.html
+++ b/about-page.html
@@ -40,6 +40,13 @@
     <h1>Antrea Antoniou</h1>
   </nav>
 
+  <div class="sandbox sandbox-correct-pronounciation">
+    <h5 class="heading heading-correct-pronounciation">
+      <em>Antrea Antoniou</em>
+     Artist - Arhcitect
+    </h1>
+  </div>
+  
   <main class="w-50 text-center">
     <div>
       <p><br><br>Hello, my name is Antrea and I am an artist involved in many fields. My enthusiasm towards drawing, progression and interesting compositions has led me to discover my passion for art.
