Revert "Modal and banner added"
This reverts commit cf16db36dd934384d250513951e07255ce794ebd.

--- a/example.html
+++ b/example.html
@@ -41,33 +41,6 @@
       <h1>Antrea Antoniou</h1>
     </nav>
 
-    <div class="sandbox sandbox-correct-pronounciation">
-      <h5 class="heading heading-correct-pronounciation">
-        <em>Antrea Antoniou</em>
-       Artist
-      </h1>
-    </div>
-
-    <!-- Modal -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Copyright for all images belongs to Antrea Antoniou and therefore may not be reproduced without written agreement, please use the live form to contact Antrea for exclusive copyright licensing.
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
-
     <main role="main" style="height: 100%">
 
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
@@ -168,6 +141,32 @@
         </div>
       </div>
     </main>
+<!--
+      <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalCenterTitle">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Copyright for images belongs to Antrea Antoniou
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <style>
+        body {
+          d-block w-100: 10%
+        }
+      </style>
 
    <div id="carouselExampleSlidesOnly" class="carousel slide1" data-ride="carousel">
 <div class="carousel-inner">
