--- a/about-page.html
+++ b/about-page.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="">Home</a>
+          <a class="nav-link" href="https://niamhnishuilleabhain.github.io/group_project/">Home</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="about-page.html">About me<span class="sr-only">(current)</span></a>
